correcting bad translation
Change-Id: Ib71ec81c1281a1a6cacbfebbeabf012b5b23586e

--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -187,6 +187,6 @@
     <string name="status_unknown_error">خطای نامشخص</string>
 
     <!-- Bluetooth OPP Live Folder -->
-    <string name="btopp_live_folder">بلوتوث دریافت شد</string>
+    <string name="btopp_live_folder">بلوتوث‌ها</string>
 
 </resources>
