--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -44,7 +44,7 @@
     <!--Title -->
     <string name="incoming_file_confirm_title">جابجایی پرونده</string>
     <!--content -->
-    <string name="incoming_file_confirm_content">\u0022%1$s\u0022 می‌خواهد %2$s (%3$s) را به شما ارسال کند. \n\n قبول کنم؟ </string>
+    <string name="incoming_file_confirm_content">‏«%1$s» می‌خواهد %2$s (%3$s) را به شما ارسال کند. \n\n قبول کنم؟ </string>
     <!-- Label for a cancel button. -->
     <string name="incoming_file_confirm_cancel">رد</string>
     <!-- Label for a confirm button.-->
@@ -52,7 +52,7 @@
     <!-- Label for timeout OK button.-->
     <string name="incoming_file_confirm_timeout_ok">قبول</string>
     <!-- content for timeout-->
-    <string name="incoming_file_confirm_timeout_content">زمان قبول‌کردن پرونده از \u0022%1$s\u0022 از حد مجاز آن بیشتر شده است</string>
+    <string name="incoming_file_confirm_timeout_content">زمان قبول کردن پرونده از «%1$s» از حد مجاز آن بیشتر شده است</string>
 
     <!-- Bluetooth File Transfer Acceptance Notification item -->
     <string name="incoming_file_confirm_Notification_title">اشتراک‌گذاری بلوتوث: پروندهٔ ورودی</string>
@@ -86,7 +86,7 @@
     <!--Title -->
     <string name="download_title">جابجایی پرونده</string>
     <!--Line 1 -->
-    <string name="download_line1">از: \u0022%1$s\u0022</string>
+    <string name="download_line1">از: «%1$s»</string>
     <!--Line 2 -->
     <string name="download_line2">پرونده: %1$s</string>
     <!--Line 3 -->
@@ -116,7 +116,7 @@
     <string name="download_succ_ok">باز کن</string>
 
     <!-- Bluetooth Upload Progress Dialog -->
-    <string name="upload_line1">به: \u0022%1$s\u0022</string>
+    <string name="upload_line1">به: «%1$s»</string>
     <string name="upload_line3">نوع پرونده: %1$s (%2$s)</string>
     <string name="upload_line5">در حال ارسال پرونده\u2026</string>
 
@@ -127,7 +127,7 @@
     <string name="upload_succ_ok">قبول</string>
 
     <!-- Bluetooth Failed Upload File Transfer Dialog -->
-    <string name="upload_fail_line1">پرونده به \u0022%1$s\u0022 ارسال نشد.</string>
+    <string name="upload_fail_line1">پرونده به «%1$s» ارسال نشد.</string>
     <string name="upload_fail_line1_2">پرونده: %1$s</string>
     <!-- Label for a try again button.-->
     <string name="upload_fail_ok">تلاش مجدد</string>
@@ -148,25 +148,25 @@
     <!-- Bluetooth Toast Message -->
     <string name="bt_toast_1">پرونده دریافت خواهد شد. پیشرفت آنرا در نوار اطلاع‌ها بررسی کنید.</string>
     <string name="bt_toast_2">پرونده دریافت نخواهد شد.</string>
-    <string name="bt_toast_3">دریافت پرونده از \u0022%1$s\u0022 متوقف شد</string>
-    <string name="bt_toast_4">در حال ارسال به \u0022%1$s\u0022</string>
-    <string name="bt_toast_5">در حال ارسال %1$s پرونده به \u0022%2$s\u0022</string>
-    <string name="bt_toast_6">ارسال پرونده به \u0022%1$s\u0022 متوقف شد</string>
-    <string name="bt_toast_7">ارسال  %1$s پرونده به \u0022%2$s\u0022 متوقف شد</string>
+    <string name="bt_toast_3">دریافت پرونده از «%1$s» متوقف شد</string>
+    <string name="bt_toast_4">در حال ارسال به «%1$s»</string>
+    <string name="bt_toast_5">در حال ارسال %1$s پرونده به «%2$s»</string>
+    <string name="bt_toast_6">ارسال پرونده به «%1$s» متوقف شد</string>
+    <string name="bt_toast_7">ارسال  %1$s پرونده به «%2$s» متوقف شد</string>
 
     <!-- Bluetooth System Messages -->
-    <string name="bt_sm_2_1">به مقدار کافی فضای خالی بر روی کارت‌حافظه برای ذخیره‌کردن پرونده از \u0022%1$s\u0022 وجود ندارد</string>
+    <string name="bt_sm_2_1">به مقدار کافی فضای خالی بر روی کارت‌حافظه برای ذخیره‌کردن پرونده از «%1$s» وجود ندارد</string>
     <string name="bt_sm_2_2">فضای موردنیاز: %1$s</string>
-    <string name="bt_sm_3_1">\u0022%1$s\u0022 می‌خواهد به شما %2$s پرونده ارسال کند. </string>
+    <string name="bt_sm_3_1">«%1$s» می‌خواهد به شما %2$s پرونده ارسال کند. </string>
     <string name="bt_sm_3_2">با این حال، این دستگاه فقط می‌تواند در یک لحظه، یک پرونده را دریافت کند. از فرد دیگر بخواهید تا %1$s پروندهٔ دیگر را تک‌تک ارسال کند.</string>
 
     <!-- Bluetooth Transfer Failure Messages -->
-    <string name="bt_tf_1">\u0022%1$s\u0022 در دسترس نیست.</string>
-    <string name="bt_tf_2">نمی‌توان با \u0022%1$s\u0022 جفت شد.</string>
+    <string name="bt_tf_1">«%1$s» در دسترس نیست.</string>
+    <string name="bt_tf_2">نمی‌توان با «%1$s» جفت شد.</string>
     <string name="bt_tf_3">اتصال متوقف شد.</string>
-    <string name="bt_tf_4">\u0022%1$s\u0022 از جابجایی پرونده‌ها پشتیبانی نمی‌کند.</string>
-    <string name="bt_tf_5">\u0022%1$s\u0022 نمی‌تواند  %2$s را قبول کند</string>
-    <string name="bt_tf_6">\u0022%1$s\u0022 پرونده را قبول نکرد.</string>
+    <string name="bt_tf_4">«%1$s» از جابجایی پرونده‌ها پشتیبانی نمی‌کند.</string>
+    <string name="bt_tf_5">«%1$s» نمی‌تواند  %2$s را قبول کند</string>
+    <string name="bt_tf_6">«%1$s» پرونده را قبول نکرد.</string>
     <string name="bt_tf_7">پرونده را نمی‌توان ارسال کرد.</string>
     <string name="bt_tf_8">پرونده را نمی‌توان دریافت کرد.</string>
     <string name="bt_tf_10">کارت حافظه قفل شده است. برای ذخیرهٔ پرونده‌ها، باید ابتدا قفل آنرا باز کنید.</string>
