--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -52,7 +52,7 @@
     <!-- Label for timeout OK button.-->
     <string name="incoming_file_confirm_timeout_ok">خُب</string>
     <!-- content for timeout-->
-    <string name="incoming_file_confirm_timeout_content">تأیید دریافت بیش از حد طول کشید.</string>
+    <string name="incoming_file_confirm_timeout_content">تأیید دریافت، بیش از حد طول کشید.</string>
 
     <!-- Bluetooth File Transfer Acceptance Notification item -->
     <string name="incoming_file_confirm_Notification_title">بلوتوث: پروندهٔ ورودی</string>
@@ -86,7 +86,7 @@
     <!--Line 2 -->
     <string name="download_line2">پرونده: %1$s</string>
     <!--Line 3 -->
-    <string name="download_line3">اندازه پرونده: %1$Ls</string>
+    <string name="download_line3">اندازهٔ پرونده: %1$Ls</string>
     <!--Line 4 -->
     <string name="download_line4"></string>
     <string name="download_line5">در حال دریافت پرونده\u2026</string>
@@ -150,7 +150,7 @@
     <string name="bt_toast_6">ارسال پرونده به «%1$s» متوقف شد.</string>
     
     <!-- Bluetooth System Messages -->
-    <string name="bt_sm_2_1">کارت حافظه جای کافی برای ذخیره کردن پروندهٔ ارسالی از «%1$s» ندارد.</string>
+    <string name="bt_sm_2_1">کارت حافظه جای کافی برای ذخیره کردن پروندهٔ ارسالی از «%1$s» را ندارد.</string>
     <string name="bt_sm_2_2">فضای موردنیاز: %1$Ls</string>
     <string name="ErrorTooManyRequests">تعداد درخواست‌های در حال پردازش بسیار زیاد است. بعداً امتحان کنید.</string>
 
